Changes in @NEW@:
  o Client Changes:
    * cvc and conary now take -r to mean --root and -c to mean --config.
      Commands that take --info now take -i as an alternative.
    * contexts may now override any configuration option. (CNY-812)

  o Build (cvc) Changes:
    * "cvc commit -m'commit message'" is now accepted.  Previously, a
      space was required between the -m and the message.

  o Optimizations:
    * Getting a large number of troves (without files) from the local database
      has been sped up by 30%.  (CNY-907).
    * conary q --troves is 2 times faster, conary q, conary q --deps and 
      --info  are 30% faster, and conary q --troves --recurse is 4-6 times 
      faster on a test machine.

Changes in 1.0.32:
  o Optimizations
    * Duplicate trove instantiations have been removed. Build requires are
      no longer thawed out of abstract change sets, and methods were added
      to get dependency and path hash information directly from trove
      change set objects. These changes combined for a 50% speedup an
      update --info of a large group into an empty root and saved a few
      megs of memory as well (CNY-892)
    * The changes in the previous version of Conary in how XML-RPC
      responses are decompressed actually made Conary slower.  These
      changes have been reverted.

  o Build (cvc) Changes:
    * The Requires() policy now reads pkg-config files and converts the
      "Requires:" lines in them into trove dependencies, removing the
      need to specify those dependencies manually. (CNY-896)
    * Files in /etc/conary/macros.d/ are now loaded in sorted order
      after initial macros are read from /etc/conary/macros. (CNY-878)

  o Bug Fixes:
    * Conary now runs tagscripts correctly when passed a relative root 
      parameter (CNY-416).
    * cvc log now works when there are multiple branches matching for the
      same trove on the same label.
    * Fixed resolveLevel 2 so that it does not try to update packages that