@@ -123,7 +123,7 @@ def displayTroves(cfg, troveSpecs=[], whatProvidesList=[],
 
     dcfg = display.DisplayConfig(repos, affinityDb)
 
-    dcfg.setTroveDisplay(deps=showDeps, info=info, 
+    dcfg.setTroveDisplay(deps=showDeps, info=info,
                          showBuildReqs=showBuildReqs,
                          digSigs=digSigs, fullVersions=cfg.fullVersions,
                          showLabels=cfg.showLabels, fullFlavors=cfg.fullFlavors,
@@ -210,7 +210,7 @@ def getTrovesToDisplay(repos, troveSpecs, whatProvidesList, versionFilter,
 
 
         if not troveSpecs:
-            return sorted(troveTups)
+            return sorted(troveTups, display._sortTroves)
 
         # Search for troves using findTroves.  The options we
         # specify to findTroves are determined by the version and 
@@ -402,4 +402,4 @@ def getTrovesToDisplay(repos, troveSpecs, whatProvidesList, versionFilter,
                         added = True
                     if added and versionFilter == VERSION_FILTER_LATEST:
                         continue
-    return sorted(troveTups)
+    return sorted(troveTups, display._sortTroves)
